Split messages into pages on generation.
Doesn't all match up by page, but is probably useful for matching screenshots and messages.

--- a/src/index.scss
+++ b/src/index.scss
@@ -99,6 +99,10 @@ header {
         margin-top: 1rem;
         color: #999;
       }
+
+      .text {
+        margin-bottom: 1rem;
+      }
     }
 
     .filter-field {
